cambios en index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
   <h1>Hola Mundo</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima soluta cumque voluptate reprehenderit, quaerat ut tenetur veniam repellendus at ab!</p>
+  <h2>Subtitulo</h2>
 </body>
 </html>
