--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Hola Mundo</h1>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima soluta cumque voluptate reprehenderit, quaerat ut tenetur veniam repellendus at ab!</p>
-  <h2>Subtitulo</h2>
+  <h2>Subtitulo66666</h2>
   <span>Rama Master</span>
   <span>Tercera Rama</span>
 </body>
